--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
