Updated Logic for Vectors

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tiptap/extension-heading": "^2.13.0",
+    "@tiptap/extension-highlight": "^2.13.0",
     "@tiptap/extension-placeholder": "^2.13.0",
+    "@tiptap/extension-text-align": "^2.13.0",
     "@tiptap/pm": "^2.13.0",
     "@tiptap/react": "^2.13.0",
     "@tiptap/starter-kit": "^2.13.0",
