--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "convex": "^1.24.6",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "uuid4": "^2.0.3"
   },
