--- a/package.json
+++ b/package.json
@@ -9,42 +9,49 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.20.2",
     "@google/generative-ai": "^0.24.1",
-    "@langchain/community": "^0.3.45",
-    "@langchain/core": "^0.3.57",
-    "@langchain/google-genai": "^0.2.10",
+    "@langchain/community": "^1.1.1",
+    "@langchain/core": "^1.1.8",
+    "@langchain/google-genai": "^2.1.3",
+    "@langchain/textsplitters": "^1.0.1",
+    "@pinecone-database/pinecone": "^6.1.3",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tiptap/extension-heading": "^2.13.0",
-    "@tiptap/extension-highlight": "^2.13.0",
-    "@tiptap/extension-placeholder": "^2.13.0",
-    "@tiptap/extension-text-align": "^2.13.0",
-    "@tiptap/pm": "^2.13.0",
-    "@tiptap/react": "^2.13.0",
-    "@tiptap/starter-kit": "^2.13.0",
-    "axios": "^1.9.0",
+    "@tiptap/extension-heading": "^3.14.0",
+    "@tiptap/extension-highlight": "^3.14.0",
+    "@tiptap/extension-placeholder": "^3.14.0",
+    "@tiptap/extension-text-align": "^3.14.0",
+    "@tiptap/pm": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "convex": "^1.24.6",
+    "cookie": "^1.1.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.16.0",
-    "lucide-react": "^0.511.0",
-    "next": "15.3.3",
+    "jose": "^6.1.3",
+    "jsonwebtoken": "^9.0.3",
+    "lucide-react": "^0.562.0",
+    "mongoose": "^9.0.2",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "pdf-parse": "^1.1.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "pdf-parse": "^2.4.5",
+    "postcss": "^8.5.6",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "uuid4": "^2.0.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "22.15.29",
     "@types/react": "19.1.6",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.3.3",
-    "typescript": "5.8.3"
+    "typescript": "^5.9.3"
   }
 }
